--- a/005_essentials-tags/03_unordered-list-element/index.html
+++ b/005_essentials-tags/03_unordered-list-element/index.html
@@ -6,5 +6,20 @@
 </head>
 <body>
 
+<ul>
+    <li>one</li>
+    <li>run</li>
+    <li>walk</li>
+    <li>ski</li>
+    <li>surf</li>
+    <li>swim</li>
+    <li>jump</li>
+    <li>crawl</li>
+    <li>dance</li>
+    <li>love
+    </li>
+</ul>
+
+
 </body>
 </html>
